# harnack-polyscope

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindFFTW.cmake
plots/: convergence_statistics.csv  draw_loglog_slope.py  label_lines.py  plot_convergence.py  plot_csv.py  shadertoy_text.py
src/: CMakeLists.txt  dipoles.cpp  generalized_barycentric_coordinates.cpp  generalized_barycentric_coordinates.h  geometry_utils.cpp  geometry_utils.h  harnack.h  harnack.ipp  main.cpp  math_elliptic_integral.cpp  math_elliptic_integral.h  poisson_problem.cpp  poisson_problem.h  spherical_harmonics.h  spherical_harmonics.ipp  utils.cpp  utils.h  utils.ipp  vector_arithmetic.ipp
